--- a/feteado.ipynb
+++ b/feteado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "landmarks = pd.read_csv(\"../data_artificial_cites/landmarks_reales/model_mesh_002.pts\",header=None,index_col=[0],skiprows=range(2),delimiter=r\"\\s+\")"
+    "landmarks = pd.read_csv(\"../data_artificial_cites/landmarks_reales/model_mesh_001.pts\",header=None,index_col=[0],skiprows=range(2),delimiter=r\"\\s+\")\n",
+    "mesh = pymesh.load_mesh(\"../data_artificial_cites/reales/model_mesh_001.ply\")"
    ]
   },
   {
@@ -52,17 +53,6 @@
    "source": [
     "landmarks_torzo = np.array([ls0,ls1,ls2,ls3])\n",
     "centroide = landmarks_torzo.mean(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mesh = pymesh.load_mesh(\"../data_artificial_cites/reales/model_mesh_002.ply\")"
    ]
   },
   {
