--- a/feteado-intento-5.ipynb
+++ b/feteado-intento-5.ipynb
@@ -375,6 +375,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.002154 seconds process time\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/python\n",
+    "import time\n",
+    "\n",
+    "def procedure():\n",
+    "    time.sleep(10)\n",
+    "\n",
+    "# measure process time\n",
+    "t0 = time.clock()\n",
+    "print t0\n",
+    "procedure()\n",
+    "print time.clock() - t0, \"seconds process time\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
